@@ -39,6 +39,13 @@
 	$absurl		= "http://www2.giric.com/phpmyfamily/";	// Where phpmyfamily is installed
 
 //=====================================================================================================================
+// Image max and minimum sizes
+	$x_max		= 700;
+	$y_max		= 700;
+	$x_min		= 300;
+	$Y_min		= 300;
+
+//=====================================================================================================================
 // Nothing should need changing beneath this line
 //=====================================================================================================================
 
