@@ -1,3 +1,4 @@
+	ammendable max and min image size added
 	census summary added
 	mailto form added
 	html headers standardized
